--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -88,8 +88,9 @@
         <binding name="OrderDeliveryServiceSoap" />
         <binding name="DispatchingDeliveryServiceSoap" />
         <binding name="OnHoldServiceSoap" />
-        <binding name="RawMaterialsServiceSoap" />
         <binding name="ProdRawSoap" />
+        <binding name="AdminRawSoap" />
+        <binding name="WarehouseRawSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -104,11 +105,15 @@
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
-        <binding name="RawMaterialsServiceSoap12">
+        <binding name="ProdRawSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
-        <binding name="ProdRawSoap12">
+        <binding name="AdminRawSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="WarehouseRawSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -133,18 +138,24 @@
       <endpoint address="http://localhost:2908/qualitycontrol/WebService/OnHoldService.asmx"
         binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
         contract="OnholdService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
-      <endpoint address="http://localhost:2908/warehouse/WebService/RawMaterialsService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="RawMaterialsServiceSoap"
-        contract="RawMaterialService.RawMaterialsServiceSoap" name="RawMaterialsServiceSoap" />
-      <endpoint address="http://localhost:2908/warehouse/WebService/RawMaterialsService.asmx"
-        binding="customBinding" bindingConfiguration="RawMaterialsServiceSoap12"
-        contract="RawMaterialService.RawMaterialsServiceSoap" name="RawMaterialsServiceSoap12" />
       <endpoint address="http://localhost:2908/production/WebService/ProdRaw.asmx"
         binding="basicHttpBinding" bindingConfiguration="ProdRawSoap"
         contract="ProductRawService.ProdRawSoap" name="ProdRawSoap" />
       <endpoint address="http://localhost:2908/production/WebService/ProdRaw.asmx"
         binding="customBinding" bindingConfiguration="ProdRawSoap12"
         contract="ProductRawService.ProdRawSoap" name="ProdRawSoap12" />
+      <endpoint address="http://localhost:2908/admin/WebService/AdminRaw.asmx"
+        binding="basicHttpBinding" bindingConfiguration="AdminRawSoap"
+        contract="AdminRawService.AdminRawSoap" name="AdminRawSoap" />
+      <endpoint address="http://localhost:2908/admin/WebService/AdminRaw.asmx"
+        binding="customBinding" bindingConfiguration="AdminRawSoap12"
+        contract="AdminRawService.AdminRawSoap" name="AdminRawSoap12" />
+      <endpoint address="http://localhost:2908/warehouse/WebService/WarehouseRaw.asmx"
+        binding="basicHttpBinding" bindingConfiguration="WarehouseRawSoap"
+        contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap" />
+      <endpoint address="http://localhost:2908/warehouse/WebService/WarehouseRaw.asmx"
+        binding="customBinding" bindingConfiguration="WarehouseRawSoap12"
+        contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap12" />
     </client>
     <!--<client>
     <endpoint address="http://112.209.172.28/qualitycontrol/WebService/OrderDeliveryService.asmx"
