--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -92,6 +92,8 @@
         <binding name="ProdRawSoap" />
         <binding name="AdminRawSoap" />
         <binding name="WarehouseRawSoap" />
+        <binding name="ManageSupplierServiceSoap" />
+        <binding name="ManageItemServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -115,6 +117,14 @@
           <httpTransport />
         </binding>
         <binding name="WarehouseRawSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      <binding name="ManageSupplierServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      <binding name="ManageItemServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -192,9 +202,12 @@
       <endpoint address="http://triton.pemaustria.com/warehouse/WebService/WarehouseRaw.asmx"
         binding="basicHttpBinding" bindingConfiguration="WarehouseRawSoap"
         contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap" />
-      <endpoint address="http://triton.pemaustria.com/warehouse/WebService/WarehouseRaw.asmx"
-        binding="customBinding" bindingConfiguration="WarehouseRawSoap12"
-        contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap12" />
+      <endpoint address="http://triton.pemaustria.com/superadmin/WebService/ManageSupplierService.asmx"
+        binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
+        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap12" />
+    <endpoint address="http://triton.pemaustria.com/superadmin/WebService/ManageItemService.asmx"
+        binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
+        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
     </client>
   </system.serviceModel>
 </configuration>
