Managr Item and Supplier Service

--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -17,7 +17,7 @@
          providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <connectionStrings>
-    <add name ="getdatabase" connectionString ="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
+    <add name="getdatabase"  connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--<connectionStrings>
@@ -92,8 +92,8 @@
         <binding name="ProdRawSoap" />
         <binding name="AdminRawSoap" />
         <binding name="WarehouseRawSoap" />
-        <binding name="ManageSupplierServiceSoap" />
         <binding name="ManageItemServiceSoap" />
+        <binding name="ManageSupplierServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -120,11 +120,11 @@
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
-      <binding name="ManageSupplierServiceSoap12">
+        <binding name="ManageItemServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
-      <binding name="ManageItemServiceSoap12">
+        <binding name="ManageSupplierServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -202,12 +202,18 @@
       <endpoint address="http://triton.pemaustria.com/warehouse/WebService/WarehouseRaw.asmx"
         binding="basicHttpBinding" bindingConfiguration="WarehouseRawSoap"
         contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap" />
+      <endpoint address="http://triton.pemaustria.com/superadmin/WebService/ManageItemService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageItemServiceSoap"
+        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap" />
+      <endpoint address="http://triton.pemaustria.com/superadmin/WebService/ManageItemService.asmx"
+        binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
+        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
+      <endpoint address="http://triton.pemaustria.com/superadmin/WebService/ManageSupplierService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageSupplierServiceSoap"
+        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap" />
       <endpoint address="http://triton.pemaustria.com/superadmin/WebService/ManageSupplierService.asmx"
         binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
         contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap12" />
-    <endpoint address="http://triton.pemaustria.com/superadmin/WebService/ManageItemService.asmx"
-        binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
-        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
     </client>
   </system.serviceModel>
 </configuration>
