--- a/ecci.inv.system/packages.config
+++ b/ecci.inv.system/packages.config
@@ -12,4 +12,5 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net452" />
+  <package id="Neodynamic.SDK.WebClientPrint" version="4.0.2018.601" targetFramework="net452" />
 </packages>
