For return status

--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -17,13 +17,13 @@
          providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <connectionStrings>
-    <add name ="getdatabase" connectionString ="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
+    <add name="getdatabase"  connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
          providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
-  <connectionStrings>
+  </connectionStrings>
+  <!--<connectionStrings>
     <add name="getdatabase" connectionString="Data Source=JOHNREY-PC\SQLEXPRESS;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=joanamahal029;"
     providerName="System.Data.SqlClient"/>
-  </connectionStrings>
+  </connectionStrings>-->
   <system.web>
     <webServices>
       <protocols>
@@ -88,12 +88,12 @@
       <basicHttpBinding>
         <binding name="OrderDeliveryServiceSoap" />
         <binding name="DispatchingDeliveryServiceSoap" />
-        <binding name="OnHoldServiceSoap" />
         <binding name="ProdRawSoap" />
         <binding name="AdminRawSoap" />
         <binding name="WarehouseRawSoap" />
         <binding name="ManageItemServiceSoap" />
         <binding name="ManageSupplierServiceSoap" />
+        <binding name="OnHoldServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -101,10 +101,6 @@
           <httpTransport />
         </binding>
         <binding name="DispatchingDeliveryServiceSoap12">
-          <textMessageEncoding messageVersion="Soap12" />
-          <httpTransport />
-        </binding>
-        <binding name="OnHoldServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -125,6 +121,10 @@
           <httpTransport />
         </binding>
         <binding name="ManageSupplierServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="OnHoldServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -181,12 +181,6 @@
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
         binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12"
         contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap12" />
-      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="OnHoldServiceSoap"
-        contract="OnholdService.OnHoldServiceSoap" name="OnHoldServiceSoap" />
-      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
-        binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
-        contract="OnholdService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
       <endpoint address="http://triton.pemaustria.com/production/WebService/ProdRaw.asmx"
         binding="basicHttpBinding" bindingConfiguration="ProdRawSoap"
         contract="ProductRawService.ProdRawSoap" name="ProdRawSoap" />
@@ -214,6 +208,12 @@
       <endpoint address="http://triton.pemaustria.com/superadmin/WebService/ManageSupplierService.asmx"
         binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
         contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap12" />
+      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="OnHoldServiceSoap"
+        contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap" />
+      <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
+        binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
+        contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
     </client>
   </system.serviceModel>
 </configuration>
