--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -88,12 +88,12 @@
       <basicHttpBinding>
         <binding name="OrderDeliveryServiceSoap" />
         <binding name="DispatchingDeliveryServiceSoap" />
-        <binding name="OnHoldServiceSoap" />
         <binding name="ProdRawSoap" />
         <binding name="AdminRawSoap" />
         <binding name="WarehouseRawSoap" />
         <binding name="ManageSupplierServiceSoap" />
         <binding name="ManageItemServiceSoap" />
+        <binding name="OnHoldServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -101,10 +101,6 @@
           <httpTransport />
         </binding>
         <binding name="DispatchingDeliveryServiceSoap12">
-          <textMessageEncoding messageVersion="Soap12" />
-          <httpTransport />
-        </binding>
-        <binding name="OnHoldServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -120,11 +116,15 @@
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
-      <binding name="ManageSupplierServiceSoap12">
+        <binding name="ManageSupplierServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
-      <binding name="ManageItemServiceSoap12">
+        <binding name="ManageItemServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="OnHoldServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -143,12 +143,6 @@
       <endpoint address="http://localhost:2908/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
         binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12"
         contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap12" />
-      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OnHoldService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="OnHoldServiceSoap"
-        contract="OnholdService.OnHoldServiceSoap" name="OnHoldServiceSoap" />
-      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OnHoldService.asmx"
-        binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
-        contract="OnholdService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
       <endpoint address="http://localhost:2908/production/WebService/ProdRaw.asmx"
         binding="basicHttpBinding" bindingConfiguration="ProdRawSoap"
         contract="ProductRawService.ProdRawSoap" name="ProdRawSoap" />
@@ -167,6 +161,24 @@
       <endpoint address="http://localhost:2908/warehouse/WebService/WarehouseRaw.asmx"
         binding="customBinding" bindingConfiguration="WarehouseRawSoap12"
         contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap12" />
+      <endpoint address="http://localhost:2908/superadmin/WebService/ManageItemService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageItemServiceSoap"
+        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap" />
+      <endpoint address="http://localhost:2908/superadmin/WebService/ManageItemService.asmx"
+        binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
+        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
+      <endpoint address="http://localhost:2908/superadmin/WebService/ManageSupplierService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageSupplierServiceSoap"
+        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap" />
+      <endpoint address="http://localhost:2908/superadmin/WebService/ManageSupplierService.asmx"
+        binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
+        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap12" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OnHoldService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="OnHoldServiceSoap"
+        contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OnHoldService.asmx"
+        binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
+        contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
     </client>
     <!--<client>
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
