--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -94,6 +94,7 @@
         <binding name="ManageSupplierServiceSoap" />
         <binding name="ManageItemServiceSoap" />
         <binding name="OnHoldServiceSoap" />
+        <binding name="PurchaseOrderServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -125,6 +126,10 @@
           <httpTransport />
         </binding>
         <binding name="OnHoldServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="PurchaseOrderServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -179,6 +184,12 @@
       <endpoint address="http://localhost:2908/qualitycontrol/WebService/OnHoldService.asmx"
         binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
         contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
+      <endpoint address="http://localhost:2908/sales/WebService/ProductOrderService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="PurchaseOrderServiceSoap"
+        contract="ProductOrderService.PurchaseOrderServiceSoap" name="PurchaseOrderServiceSoap" />
+      <endpoint address="http://localhost:2908/sales/WebService/ProductOrderService.asmx"
+        binding="customBinding" bindingConfiguration="PurchaseOrderServiceSoap12"
+        contract="ProductOrderService.PurchaseOrderServiceSoap" name="PurchaseOrderServiceSoap12" />
     </client>
     <!--<client>
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
