--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -94,7 +94,7 @@
         <binding name="ManageSupplierServiceSoap" />
         <binding name="ManageItemServiceSoap" />
         <binding name="OnHoldServiceSoap" />
-        <binding name="PurchaseOrderServiceSoap" />
+        <binding name="ProductOrderServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -129,7 +129,7 @@
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
-        <binding name="PurchaseOrderServiceSoap12">
+        <binding name="ProductOrderServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -185,11 +185,11 @@
         binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
         contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
       <endpoint address="http://localhost:2908/sales/WebService/ProductOrderService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="PurchaseOrderServiceSoap"
-        contract="ProductOrderService.PurchaseOrderServiceSoap" name="PurchaseOrderServiceSoap" />
+        binding="basicHttpBinding" bindingConfiguration="ProductOrderServiceSoap"
+        contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap" />
       <endpoint address="http://localhost:2908/sales/WebService/ProductOrderService.asmx"
-        binding="customBinding" bindingConfiguration="PurchaseOrderServiceSoap12"
-        contract="ProductOrderService.PurchaseOrderServiceSoap" name="PurchaseOrderServiceSoap12" />
+        binding="customBinding" bindingConfiguration="ProductOrderServiceSoap12"
+        contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap12" />
     </client>
     <!--<client>
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
